--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           { text: "Use brute strength – John’s way.", next: "endingBrawn" },
           { text: "Upload Steve’s presentation loop.", next: "endingBrain" },
           { text: "Trigger the Puppy Protocol.", next: "endingPuppies" },
-          { text: "Deploy Phil’s final pun.", next: () => recruited.has("phil") ? "endingPun" : "gameOver" },
+          { text: "Deploy Phil’s final pun.", next: "endingPun" },
           { text: "Initiate the SYNAPSE shutdown deal.", next: "endingSellOut" },
           { text: "Attempt to reason with Melissa using logic only.", next: "endingLose" }
         ]
