--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       document.getElementById("title-screen").style.display = "none";
       document.getElementById("game-container").style.display = "block";
       renderScene("intro");
+      recruited.clear();
     }
 
     function renderScene(key) {
