--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         A classified company memo appears: <em>"Melissa Chapman has fully integrated with Project SYNAPSE — a rogue AI built to 'optimize humanity’s workflows.'"</em><br><br>
         You are the last employee not yet absorbed by the AI, but the other executives seem okay...for now. Who do you recruit first to resist her takeover?`,
         choices: [
-          { text: "Find Steve Ikirt and his razor-sharp business acumen.", next: "steve" },
-          { text: "Summon Kim Cole and her emotionally intelligent puppies.", next: "kim" },
-          { text: "Head to the weight room to find John 'Bench Press' Stortz.", next: "john" },
-          { text: "Visit Phil Vincenzes in the basement data vault.", next: "phil" },
-          { text: "Ping Nancy Van Balen – the Closer.", next: "nancy" }
-        ]
+  { text: "Find Steve Ikirt and his razor-sharp business acumen.", next: () => { recruited.add("steve"); return "steve"; } },
+  { text: "Summon Kim Cole and her emotionally intelligent puppies.", next: () => { recruited.add("kim"); return "kim"; } },
+  { text: "Head to the weight room to find John 'Bench Press' Stortz.", next: () => { recruited.add("john"); return "john"; } },
+  { text: "Visit Phil Vincenzes in the basement data vault.", next: () => { recruited.add("phil"); return "phil"; } },
+  { text: "Ping Nancy Van Balen – the Closer.", next: () => { recruited.add("nancy"); return "nancy"; } }
+]
       },
 
       steve: {
