--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
       },
 
       phil: {
-        text: `Phil is surrounded by code, typing in mid-air. His mustache glows faintly. "I taught SYNAPSE to generate dad jokes using a neural net. One more pun and she’ll implode."`,
+        text: `Phil is surrounded by code, typing in mid-air. His mustache glows faintly. "I found a way to trap SYNAPSE in an endless feedback loop created by humor. One more pun and we've got her!"`,
         choices: [
-          { text: "Upload Steve’s override file.", next: "melissaFight" },
+          { text: "Deliver your best dad joke.", next: "melissaFight" },
           { text: "Call Nancy to destabilize SYNAPSE’s energy.", next: "nancy" }
         ]
       },
