--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         ]
       },
       steveTrade: {
-        text: `You take Steve’s video slot and immediately receive 47 meeting invites. Meanwhile, Steve infiltrates SYNAPSE with nothing but a Bluetooth headset and swagger.`,
+        text: `'Oh, what a relief,' Steve says as he slides you a USB drive. Take this to Phil.`,
         choices: [
           { text: "Proceed to Phil with Steve’s data.", next: "phil" },
           { text: "Go it alone toward SYNAPSE’s core.", next: "melissaFight" }
